--- a/starteds/CSharp/index.html
+++ b/starteds/CSharp/index.html
@@ -6,31 +6,20 @@
 		<meta name="description" content="http://www.kitachisuku.shopから移転してきました。Kitachisuku(Kitachisuku)と申します。このサイトは、私が作ったプログラムを公開・説明する場所です。私はプログラムのテストに使うのはWindows,.Net Framework,Google Chrome,.Net 5です。言語はC#,C++,JavaScript,Rustなどを使っています。">
 		<meta name="Keywords" content="kitatisuku,undertale,programes,music">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes" />
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../../style.css">
 	</head>
 	<body style="background-color: aliceblue;">
 		<div class="box abso" style="top: 150px;left: 10%;width: 80%;">
+            <h1 style="font-family: monospace">C#プログラム入門</h1><br>
 			このサイトは、<br>
-			<strong>Kitachisuku(自分</strong>)が、<br>
-			気ままにプログラムを出しているサイトです。<br>
-			ちなみにこのサイトにはGithubを使っています。<br><br><br>
-			Github公式サイト<br>
-			<a href="https://github.com/"><img src="img/github.png" alt="Github" width="64px"></a><br>
-			<a href="https://kitachisuku.github.io/index.html">ホーム</a><br><br>
-			<a href="https://kitachisuku.github.io/programs.html">プログラム</a><br><br>
-			<a href="https://kitachisuku.github.io/programstarted.html">プログラム入門</a><br><br>
-			<a href="https://kitachisuku.github.io/clientprograms.html">Web動作プログラム</a><br><br>
-			<a href="https://kitachisuku.github.io/musics.html">曲</a><br><br>
-			使わせていただいたもの<br>
-			Title Font - Graty Sans<br>
-			SubTitle Font - Jsb Double Jointedbr
-			by fontmeme
+
+            <br>
 		</div>
 		<div class="topBar abso">
-			<a href="https://kitachisuku.github.io/index.html"><img src="img/top.png" alt="Kitachisuku Site" style="position:fixed;left: 10px;top: 10px"></a>
-			<img src="img/Home.png" alt="HOME" style="position: fixed;left: 540px;top: 10px" width="100px">
+			<a href="index.html"><img src="../../img/top.png" alt="Kitachisuku Site" style="position:fixed;left: 10px;top: 10px"></a>
+			<img src="../../img/StartedProgram.png" alt="HOME" style="position: fixed;left: 540px;top: 5px" width="140px">
 			<a href="https://github.com/Kitachisuku" style="position: fixed;left: 540px;top: 20px">
-				<img src="img/mygithub.png" alt="My Github" width="300px" style="position: fixed;top: 60px;">
+				<img src="../../img/mygithub.png" alt="My Github" width="300px" style="position: fixed;top: 60px;">
 			</a>
 			<div class="menu">
 				<a href="https://kitachisuku.github.io/index.html" class="menu">ホーム</a>
