--- a/programstarted.html
+++ b/programstarted.html
@@ -10,25 +10,27 @@
 	</head>
 	<body style="background-color: aliceblue;">
 		<div class="box abso" style="top: 150px;left: 10%;width: 80%;">
-			このサイトは、<br>
-			<strong>Kitachisuku(自分</strong>)が、<br>
-			気ままにプログラムを出しているサイトです。<br>
-			ちなみにこのサイトにはGithubを使っています。<br><br><br>
-			Github公式サイト<br>
-			<a href="https://github.com/"><img src="img/github.png" alt="Github" width="64px"></a><br>
-			<a href="https://kitachisuku.github.io/index.html">ホーム</a><br><br>
-			<a href="https://kitachisuku.github.io/programs.html">プログラム</a><br><br>
-			<a href="https://kitachisuku.github.io/programstarted.html">プログラム入門</a><br><br>
-			<a href="https://kitachisuku.github.io/clientprograms.html">Web動作プログラム</a><br><br>
-			<a href="https://kitachisuku.github.io/musics.html">曲</a><br><br>
-			使わせていただいたもの<br>
-			Title Font - Graty Sans<br>
-			SubTitle Font - Jsb Double Jointedbr
-			by fontmeme
+            <h1 style="font-family: monospace">プログラム入門</h1><br>
+			<a href="https://kitachisuku.github.io/programstarted.html">プログラム入門に戻る</a><br>
+            <hr color="#A7DBDF">
+			<h1>C#とは?</h1>
+			<div style="position: relative;text-align: left;left: 10%">
+				C#とは、<br>
+				<strong>Microsoft</strong>が開発したプログラミング言語です。<br>
+				動作速度はC/C++に匹敵するほどで、<br>
+				Windows標準搭載の、<br>
+				「.Net Framework」がある環境か、<br>
+				「.Net Core」などがインストールされている、<br>
+				Windows,Mac,Linuxなどで動作します。<br>
+				(このとき、WPF,Windows Formsという技術や、<br>
+				UWPはMac,Linux上で動作しませんが、<br>
+				2021年に公開予定の「.Net 6」には、<br>
+				クロスプラットフォームUIが搭載されるようです。)
+			</div>
 		</div>
 		<div class="topBar abso">
 			<a href="https://kitachisuku.github.io/index.html"><img src="img/top.png" alt="Kitachisuku Site" style="position:fixed;left: 10px;top: 10px"></a>
-			<img src="img/Home.png" alt="HOME" style="position: fixed;left: 540px;top: 10px" width="100px">
+			<img src="img/StartedProgram.png" alt="HOME" style="position: fixed;left: 540px;top: 5px" width="140px">
 			<a href="https://github.com/Kitachisuku" style="position: fixed;left: 540px;top: 20px">
 				<img src="img/mygithub.png" alt="My Github" width="300px" style="position: fixed;top: 60px;">
 			</a>
